# magnetic-monopole

./: .gitignore  Cargo.toml
src/: lib.rs  main.rs  physics.rs  vector.rs
