[package]
name = "magnetic-monopole"
version = "0.2.0"
authors = ["Hipy Cas <hipycas@gmail.com>"]
edition = "2018"
license-file = "LICENSE"
license = "GPL-3.0+"
homepage = "https://github.com/hipycas/magnetic-monopole"
description = "A simple calculation of the effects of a magnetic monopole"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mathrs = "0.0.6"
